<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="@string/pref_notify_last_date"
        app:defaultValue="01 Jan 1970"
        app:title="Tanggal"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_time"
        app:defaultValue="23:59:59 WIX"
        app:title="Jam"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_datetime"
        app:defaultValue="01 Jan 1970T23:59:59+00.00"
        app:title="DateTime"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_coordinates"
        app:defaultValue="0.0,0.0"
        app:title="Coordinates"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_lintang"
        app:defaultValue="0.0 LU"
        app:title="Lintang"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_bujur"
        app:defaultValue="0.0 BB"
        app:title="Bujur"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_magnitude"
        app:defaultValue="0.0"
        app:title="Magnitude"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_kedalaman"
        app:defaultValue="0 km"
        app:title="Kedalaman"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_wilayah"
        app:defaultValue="0 km BaratDaya LEMBAH-UNK"
        app:title="Wilayah"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_potensi"
        app:defaultValue="Tidak berpotensi tsunami"
        app:title="Potensi"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_dirasakan"
        app:defaultValue="Tidak ada"
        app:title="Dirasakan"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

    <EditTextPreference
        app:key="@string/pref_notify_last_shakemap"
        app:defaultValue="0.mmi.jpg"
        app:title="Shakemap"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>