<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.quaketodayid.ui.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quaketodayid.ui.ui.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.quaketodayid.ui.ui.rating.RatingFragment"
        android:label="@string/rate_amp_review"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.quaketodayid.ui.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />
</navigation>